# safr_backend

./: .gitignore  Dockerfile  README.md  pyproject.toml  seed_cities_prodpy
alembic/: env.py
alembic/versions/: 5616b981c3ea_add_cityattribute_table_and_user_.py  6a0c529b4bf8_add_raw_value_to_attribute_table.py  b1394801f249_make_username_case_insensitive.py  c03f328a4a78_create_initial_tables.py  cd04b7da7c3b_add_population_to_city_table.py  f35826018ede_add_extra_columns_to_cities_table_for_.py
scripts/: debug.py  seed_cities.py
scripts/attributes/: update_air_quality.py  update_internet_speed.py  update_urban_greenery.py
src/safr_backend/: constants.py  crud.py  database.py  main.py  models.py  schemas.py  security.py
src/safr_backend/routers/: auth.py  cities.py  rankings.py  users.py
