[project]
name = "safr-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Raghib Mirza",email = "realraghibmrz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "psycopg-binary (>=3.2.6,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "pydantic[email] (>=2.11.4,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "greenlet (>=3.2.1,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "pycountry (>=24.6.1,<25.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "geopandas (>=1.1.0,<2.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)"
]

[tool.poetry]
packages = [{include = "safr_backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
